--- a/src/index.html
+++ b/src/index.html
@@ -20,26 +20,30 @@
             </button>
           </div>
           <div class="note-selectors">
-            <div class="selector first" data-from="0" data-to="80"></div>
+            <div class="selector first" data-from="0" data-to="80" data-y="150"></div>
             <div
               class="selector second other"
               data-from="100"
               data-to="140"
+              data-y="200"
             ></div>
             <div
               class="selector third other"
               data-from="160"
               data-to="200"
+              data-y="250"
             ></div>
             <div
               class="selector fourth other"
               data-from="220"
               data-to="260"
+              data-y="300"
             ></div>
             <div
               class="selector fifth other"
               data-from="280"
               data-to="320"
+              data-y="350"
             ></div>
           </div>
         </div>
@@ -99,6 +103,7 @@
               </div>
             </div>
           </div>
+         
         </div>
       </main>
     </div>
