--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       <!-- Nav -->
       <div class="nav">
         <div class="logo">
-          <h4>Docket</h4>
+          <h4>COLORLY</h4>
         </div>
         <div class="notes-container">
           <div class="add-button">
@@ -91,7 +91,7 @@
           <div class="note">
             <textarea
               type="text"
-              placeholder="The beginning of screenless design: UI jobs to be take over by Solution Architect"
+              placeholder="Let yourself feel insecure from time. It will help you grow as an indivdual."
             ></textarea>
             <div class="footer">
               <div class="date">
