--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
     <title>Document</title>
     <link rel="stylesheet" href="./app.scss" />
   </head>
@@ -21,7 +24,12 @@
             </button>
           </div>
           <div class="note-selectors">
-            <div class="selector first" data-from="0" data-to="80" data-y="150"></div>
+            <div
+              class="selector first"
+              data-from="0"
+              data-to="80"
+              data-y="150"
+            ></div>
             <div
               class="selector second other"
               data-from="100"
@@ -104,7 +112,6 @@
               </div>
             </div>
           </div>
-         
         </div>
       </main>
     </div>
