--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
           <div class="note">
             <textarea
               type="text"
-              placeholder="Let yourself feel insecure from time. It will help you grow as an indivdual."
+              placeholder="Great things in business are never done by one person. They're done by a team of people."
             ></textarea>
             <div class="footer">
               <div class="date">
